# tripgenie

./: .gitignore  README.md  pyproject.toml  requirements.txt
tripgenie/: ai.py  cli.py
tripgenie.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tripgenie/data/: destinations.json
